add new sections

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <input type="text" placeholder="Поиск" />
                 </div>
                 <div class="header_item">
-                    <img src="assets/image/header/phone.svg" alt="phon_icon" />8 (961)
-                    525 91 91<br />
+                    <img src="assets/image/header/phone.svg" alt="phon_icon" />8
+                    (961) 525 91 91<br />
                     <button>Заказать звонок</button>
                 </div>
                 <div class="header_item">
@@ -42,11 +42,14 @@
                     <a href="">Избранное</a>
                 </div>
                 <div class="header_item">
-                    <img src="assets/image/header/bascket.svg" alt="bascket_icon" />
+                    <img
+                        src="assets/image/header/bascket.svg"
+                        alt="bascket_icon"
+                    />
                     <a href="">Корзина</a>
                 </div>
             </div>
-        
+
             <div class="nav">
                 <div class="nav-menu container">
                     <a href="">КУХНИ</a>
@@ -60,32 +63,44 @@
                 </div>
             </div>
         </header>
-            <main>
+        <main>
             <section>
                 <h1 class="container">НАШИ ПРЕИМУЩЕСТВА</h1>
                 <div class="section-1 container">
                     <div class="section-1_item">
                         <div class="section-1_item-content">
-                            <img src="assets/image/main/location.svg" alt="location_icon" />
+                            <img
+                                src="assets/image/main/location.svg"
+                                alt="location_icon"
+                            />
                             Удобное расположение магазина
                         </div>
                     </div>
                     <div class="section-1_item">
                         <div class="section-1_item-content">
-                            <img src="assets/image/main/delivery.svg" alt="delivery_icon" />
+                            <img
+                                src="assets/image/main/delivery.svg"
+                                alt="delivery_icon"
+                            />
                             Быстрая доставка
                         </div>
                     </div>
                     <div class="section-1_item">
                         <div class="section-1_item-content">
-                            <img src="assets/image/main/low_price.svg" alt="price_icon" />
+                            <img
+                                src="assets/image/main/low_price.svg"
+                                alt="price_icon"
+                            />
                             <span>Низкие цены</span><br />
                             Если найдете дешевле - сделаем скидку
                         </div>
                     </div>
                     <div class="section-1_item">
                         <div class="section-1_item-content">
-                            <img src="assets/image/main/quality.svg" alt="quality_icon" />
+                            <img
+                                src="assets/image/main/quality.svg"
+                                alt="quality_icon"
+                            />
                             Гарантия качества
                         </div>
                     </div>
@@ -106,9 +121,28 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <h2 class="container">НАШИ РАБОТЫ</h2>
+                <div class="section-3 container">
+                    <div class="section-3_item">
+                        <a href="">КУХНЯ ГЛЕТЧЕР</a>
+                    </div>
+                    <div class="section-3_item">
+                        <a href="">ГОСТИННАЯ ДЕНВЕР</a>
+                    </div>
+                    <div class="section-3_item"><a href="">КУХНЯ АМЕЛИ</a></div>
+                    <div class="section-3_item">
+                        <a href="">КУХНЯ ЛОНДОН</a>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h2 class="container">МЫ В INSTAGRAM</h2>
+                <div class="section-4 container">
+                    <div class="instagram"><img src="./assets/image/main/instagram_photos.jpg" alt="instagram"></div>
+                </div>
+            </section>
         </main>
-        <div class="more container">
-            <a href="">Показать ещё</a>
-        </div>
+        
     </body>
 </html>
