--- a/index.html
+++ b/index.html
@@ -139,10 +139,14 @@
             <section>
                 <h2 class="container">МЫ В INSTAGRAM</h2>
                 <div class="section-4 container">
-                    <div class="instagram"><img src="./assets/image/main/instagram_photos.jpg" alt="instagram"></div>
+                    <div class="instagram">
+                        <img
+                            src="./assets/image/main/instagram_photos.jpg"
+                            alt="instagram"
+                        />
+                    </div>
                 </div>
             </section>
         </main>
-        
     </body>
 </html>
